# Esd.CppApp

./: CMakeLists.txt  README.md  build.bat  build.sh  build_lib.bat  build_lib.sh  generate_unix_project.sh  generate_vs_project.bat
EsdCppApp/: EsdCppApp.cpp  EsdCppApp.h  EsdEventHandler.cpp  EsdImGuiLayer.cpp  EsdImGuiLayer.h  EsdWindow.cpp  EsdWindow.h  EventHandler.cpp  EventHandler.h  ImGuiLayer.cpp  ImGuiLayer.h  Window.cpp  Window.h
EsdCppApp-Includes/: CMakeLists.txt  EsdCppApp.h  EsdEventHandler.h  EsdImGuiLayer.cpp  EsdImGuiLayer.h  EsdWindow.cpp  EsdWindow.h
EsdCppApp-Includes/Libs/imgui/: ImGuiFileDialog.h  imgui.h  imgui_impl_sdl2.cpp
EsdCppApp-Includes/Libs/sdl/cmake/: sdl2-config.cmake
EsdCppApp-Src/: CMakeLists.txt  EsdCppApp.cpp  EsdWindow.cpp
EsdCppApp-Unix/: CMakeLists.txt
EsdCppApp-Unix/EsdCppApp/: CMakeLists.txt  EsdCppApp.h  EsdEventHandler.cpp  EsdEventHandler.h  EsdImGuiLayer.cpp  EsdImGuiLayer.h
EsdCppApp-Unix/EsdCppApp/Fonts/: Verdana.h
EsdCppApp-Unix/Example/: CMakeLists.txt  Main.cpp
EsdCppApp-Unix/Scripts/: build.sh
EsdCppApp-Windows/: CMakeLists.txt
EsdCppApp-Windows/EsdCppApp/: CMakeLists.txt  EsdCppApp.cpp
EsdCppApp-Windows/EsdCppApp/Libs/imgui/: imgui_demo.cpp  imgui_internal.h
EsdCppApp-Windows/Scripts/: build.bat
EsdCppApp/Example/: Main.cpp
EsdCppApp/Libs/imgui/: imgui.cpp  imgui_impl_opengl2.cpp
EsdCppApp/includes/: EsdEventHandler.h  EsdImGuiLayer.h
Example/: CMakeLists.txt  Example.cpp
Example/libs/esdcppapp/includes/: EsdImGuiLayer.h
